--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"name": "OneNote",
 	"devDependencies": {
     	"grunt": "^0.4.4",
+		"grunt-contrib-clean": "^0.5.0",
 		"grunt-contrib-copy": "^0.5.0",
     	"grunt-contrib-jshint": "^0.10.0",
-    	"grunt-contrib-stylus": "^0.16.0"
+    	"grunt-contrib-stylus": "^0.16.0",
+		"grunt-contrib-uglify": "^0.4.0"
 	}
 }
